--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -41,7 +41,7 @@ commands:
           name: >
             Publish orb at << parameters.orb-path >> to << parameters.orb-ref >>
             NOTE: this currently assumes you are publishing to the registry at circleci.com
-          command: >
+          command: |
             source /usr/local/bin/envload
             export REPOSITORY_ORGANIZATION=$(git remote -v | grep "(fetch)" | sed 's/.*\/\([^ ]*\)\/.*/\1/')
             export REPOSITORY_NAME=$(basename -s .git `git config --get remote.origin.url`)
