--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -44,7 +44,9 @@ commands:
           command: |
             source /usr/local/bin/envload
             export REPOSITORY_ORGANIZATION=$(git remote -v | grep "(fetch)" | sed 's/.*\/\([^ ]*\)\/.*/\1/')
+            echo "SET REPOSITORY_ORGANIZATION: ${REPOSITORY_ORGANIZATION}"
             export REPOSITORY_NAME=$(basename -s .git `git config --get remote.origin.url`)
+            echo "SET REPOSITORY_NAME: ${REPOSITORY_NAME}"
             circleci orb publish << parameters.orb-path >> << parameters.orb-ref >> <<# parameters.token-variable >>--token << parameters.token-variable >> <</ parameters.token-variable >>
 
   pack:
