Make repository values dynamic for https and ssh

--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -43,9 +43,9 @@ commands:
             NOTE: this currently assumes you are publishing to the registry at circleci.com
           command: |
             source /usr/local/bin/envload
-            export REPOSITORY_ORGANIZATION=$(git remote -v | grep "(fetch)" | sed 's/.*\/\([^ ]*\)\/.*/\1/')
+            export REPOSITORY_ORGANIZATION=$(git config --get remote.origin.url | rev | tr '.:' '/' | cut -d'/' -f3 | rev)
             echo "SET REPOSITORY_ORGANIZATION: ${REPOSITORY_ORGANIZATION}"
-            export REPOSITORY_NAME=$(basename -s .git `git config --get remote.origin.url`)
+            export REPOSITORY_NAME=$(git config --get remote.origin.url | rev | tr '.:' '/' | cut -d'/' -f2 | rev)
             echo "SET REPOSITORY_NAME: ${REPOSITORY_NAME}"
             circleci orb publish << parameters.orb-path >> << parameters.orb-ref >> <<# parameters.token-variable >>--token << parameters.token-variable >> <</ parameters.token-variable >>
 
