--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  orbtools: gofunky/orbtools@dev:0.0.16
+  orbtools: gofunky/orbtools@0.1.0
   envorb: gofunky/envorb@0.2.6
 
 master_filter: &master_filter
