--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   cli: circleci/circleci-cli@volatile
-  envorb: gofunky/envorb@0.2.6
+  envorb: gofunky/envorb@dev:master
 
 commands:
 
@@ -199,6 +199,7 @@ jobs:
         type: string
         default: ""
     executor: cli/default
+      tag: alpine
     steps:
       # Setup
       - when:
@@ -240,6 +241,7 @@ jobs:
       Uses the CLI to increment the version of an orb in the registry.
       If the orb does not have a version yet it starts at 0.0.0
     executor: cli/default
+      tag: alpine
     parameters:
       orb-path:
         description: Path to an orb file.
@@ -309,6 +311,7 @@ jobs:
 
   publish:
     executor: cli/default
+      tag: alpine
     parameters:
       orb-path:
         description: Path of the orb file to publish.
