--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -198,7 +198,8 @@ jobs:
           artifacts.
         type: string
         default: ""
-    executor: cli/default
+    executor:
+      name: cli/default
       tag: alpine
     steps:
       # Setup
@@ -240,7 +241,8 @@ jobs:
     description: >
       Uses the CLI to increment the version of an orb in the registry.
       If the orb does not have a version yet it starts at 0.0.0
-    executor: cli/default
+    executor:
+      name: cli/default
       tag: alpine
     parameters:
       orb-path:
@@ -310,7 +312,8 @@ jobs:
           token-variable: << parameters.publish-token-variable >>
 
   publish:
-    executor: cli/default
+    executor:
+      name: cli/default
       tag: alpine
     parameters:
       orb-path:
