--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,18 +24,14 @@ pr_filter: &pr_filter
       ignore:
         - master
 
-use_alpine_version: &use_alpine_version
-
 
 set_alpine_version: &set_alpine_version
-  <<: *use_alpine_version
   alpine_version: "3.8"
   attach: true
   variable: ALPINE_VERSION
   value: "3.8"
 
 set_cli_version: &set_cli_version
-  <<: *use_alpine_version
   alpine_version: "3.8"
   variable: CLI_VERSION
   repository: "CircleCI-Public/circleci-cli"
@@ -100,7 +96,7 @@ workflows:
     jobs:
       - orbtools/check:
           name: check_pull_request
-          <<: [*pr_filter, *use_alpine_version]
+          <<: [*pr_filter]
 
   publish_orb:
     jobs:
@@ -108,7 +104,7 @@ workflows:
           name: publish_latest
           context: orb-tools
           version: "dev:${CIRCLE_BRANCH}"
-          <<: [*master_filter, *use_alpine_version]
+          <<: [*master_filter]
 
   release_orb:
     jobs:
@@ -116,10 +112,10 @@ workflows:
           name: release_tag
           alpine_version: "3.8"
           variable: ORB_PUBLISHING_VERSION
-          <<: [*tag_filter, *use_alpine_version]
+          <<: [*tag_filter]
 
       - orbtools/env-pack-publish:
           name: publish_release
           context: orb-tools
-          <<: [*tag_filter, *use_alpine_version]
+          <<: [*tag_filter]
           requires: [release_tag]
