--- a/src/jobs/env-pack-publish.yml
+++ b/src/jobs/env-pack-publish.yml
@@ -94,6 +94,7 @@ steps:
       steps:
         - env-templater:
             orb-path: << parameters.destination-file >>
+            target-path: << parameters.destination-file >>
   - when:
       condition: << parameters.validate >>
       steps:
