Use fixed dev release of envorb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   orbtools: gofunky/orbtools@0.3.0
-  envorb: gofunky/envorb@0.3.6
+  envorb: gofunky/envorb@dev:76
   docker: gofunky/docker@0.1.2
 
 master_filter: &master_filter
