--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,13 +72,13 @@ workflows:
           tags: "gofunky/orbtools:${CLI_VERSION},gofunky/orbtools:${CLI_VERSION}-alpine${ALPINE_VERSION},gofunky/orbtools:alpine${ALPINE_VERSION},gofunky/orbtools:latest"
           login: docker login -u $DOCKER_USR -p $DOCKER_PWD
           cache: true
-          requires: [set_cli_version, set_alpine_version]
+          requires: [set_cli_version, set_alpine_version, set_envtpl_version]
 
       - docker/build_test:
           name: test_latest
           <<: [*pr_filter, *orbtools_job]
           tags: "gofunky/orbtools:latest"
-          requires: [set_cli_version, set_alpine_version]
+          requires: [set_cli_version, set_alpine_version, set_envtpl_version]
 
   build_daily_image:
     triggers:
@@ -91,6 +91,10 @@ workflows:
           name: set_cli_version
           <<: *set_cli_version
 
+      - envorb/github:
+          name: set_envtpl_version
+          <<: *set_envtpl_version
+
       - envorb/value:
           name: set_alpine_version
           <<: *set_alpine_version
@@ -101,7 +105,7 @@ workflows:
           tags: "gofunky/orbtools:${CLI_VERSION},gofunky/orbtools:${CLI_VERSION}-alpine${ALPINE_VERSION},gofunky/orbtools:alpine${ALPINE_VERSION},gofunky/orbtools:latest,gofunky/orbtools:stable-alpine${ALPINE_VERSION},gofunky/orbtools:stable,gofunky/orbtools:daily"
           login: docker login -u $DOCKER_USR -p $DOCKER_PWD
           cache: true
-          requires: [set_cli_version, set_alpine_version]
+          requires: [set_cli_version, set_alpine_version, set_envtpl_version]
 
   check_orb:
     jobs:
