--- a/src/commands/env-publish.yml
+++ b/src/commands/env-publish.yml
@@ -1,4 +1,6 @@
-description: Uses the CLI to publish an orb to the registry.
+description: <
+  Uses the CLI to publish an orb to the registry.
+  Environment variables from envorbs are accepted.
 parameters:
   orb-path:
     description: The path to the orb file.
@@ -23,8 +25,4 @@ steps:
         NOTE: this currently assumes you are publishing to the registry at circleci.com
       command: |
         source /usr/local/bin/envload
-        export REPOSITORY_ORGANIZATION=$(git config --get remote.origin.url | rev | tr '.:' '/' | cut -d'/' -f3 | rev)
-        echo "SET REPOSITORY_ORGANIZATION: ${REPOSITORY_ORGANIZATION}"
-        export REPOSITORY_NAME=$(git config --get remote.origin.url | rev | tr '.:' '/' | cut -d'/' -f2 | rev)
-        echo "SET REPOSITORY_NAME: ${REPOSITORY_NAME}"
         circleci orb publish << parameters.orb-path >> << parameters.orb-ref >> <<# parameters.token-variable >>--token << parameters.token-variable >> <</ parameters.token-variable >>
