--- a/src/jobs/env-pack-publish.yml
+++ b/src/jobs/env-pack-publish.yml
@@ -39,24 +39,24 @@ parameters:
     default: true
   namespace:
     description: >
-      The namespace of your orb.
-      Environment variables from an envorb are accepted.
+      The namespace of your target orb.
+      Environment variables from envorbs are accepted.
       By default, the git organization is assumed.
     type: string
-    default: "${REPOSITORY_ORGANIZATION}"
+    default: ""
   orb-name:
     description: >
-      The name of your orb.
-      Environment variables from an envorb are accepted.
+      The name of your target orb.
+      Environment variables from envorbs are accepted.
       By default, the git repository name is assumed.
     type: string
-    default: "${REPOSITORY_NAME}"
+    default: ""
   version:
     description: >
       The publishing version of your orb.
       Either use an incrementing semantic version (e.g., 1.0.0), or a development version as `dev:<label>`,
       where `label` can be any alphanumeric string.
-      Environment variables from an envorb are accepted.
+      Environment variables from envorbs are accepted.
       By default, the environment variable `$ORB_PUBLISHING_VERSION` is assumed.
     type: string
     default: "${ORB_PUBLISHING_VERSION}"
@@ -100,9 +100,31 @@ steps:
       steps:
         - validate:
             orb-path: << parameters.destination-file >>
+  - when:
+      condition: << parameters.namespace >>
+      steps:
+        - envorb/value:
+            variable: ORB_PUBLISHING_NAMESPACE
+            value: << parameters.namespace >>
+  - unless:
+      condition: << parameters.namespace >>
+      steps:
+        - envorb/git_org:
+            variable: ORB_PUBLISHING_NAMESPACE
+  - when:
+      condition: << parameters.orb-name >>
+      steps:
+        - envorb/value:
+            variable: ORB_PUBLISHING_NAME
+      value: << parameters.orb-name >>
+  - unless:
+      condition: << parameters.orb-name >>
+      steps:
+        - envorb/git_name:
+            variable: ORB_PUBLISHING_NAME
   - env-publish:
       orb-path: << parameters.destination-file >>
-      orb-ref: "<< parameters.namespace >>/<< parameters.orb-name >>@<< parameters.version >>"
+      orb-ref: "${ORB_PUBLISHING_NAMESPACE}/${ORB_PUBLISHING_NAME}@<< parameters.version >>"
       token-variable: << parameters.publish-token-variable >>
   - when:
       condition: << parameters.persist >>
