--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  orbtools: gofunky/orbtools@dev:190
-  envorb: gofunky/envorb@0.3.8
+  orbtools: gofunky/orbtools@0.3.1
+  envorb: gofunky/envorb@0.3.9
   docker: gofunky/docker@0.1.2
 
 master_filter: &master_filter
