Test existing parameters file

--- a/src/commands/merge-parameters.yml
+++ b/src/commands/merge-parameters.yml
@@ -23,4 +23,4 @@ steps:
               yq m -x $@ "./.parameters/$param" > $@
           fi
         done
-        rm src/+parameters.yml
+        rm -f src/+parameters.yml
