Store more artifacts

--- a/src/jobs/env-pack-publish.yml
+++ b/src/jobs/env-pack-publish.yml
@@ -151,3 +151,7 @@ steps:
       steps:
         - store_artifacts:
             path: << parameters.destination-file >>
+        - store_artifacts:
+            path: .parameters
+        - store_artifacts:
+            path: src
