--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,8 @@ workflows:
           context: orb-tools
           <<: [*tag_filter, *use_alpine_version]
           requires: [release_tag]
-      - store_artifacts:
-          path: .parameters
-      - store_artifacts:
-          path: src
+          post-steps:
+            - store_artifacts:
+                path: .parameters
+            - store_artifacts:
+                path: src
