Fix invalid error code from sh yq

--- a/src/commands/merge-parameters.yml
+++ b/src/commands/merge-parameters.yml
@@ -23,7 +23,6 @@ steps:
                 yq p -v -i ./.parameters/$param.yml parameters.$param && \
                 mv {} {}.old && \
                 yq m -v -x {}.old ./.parameters/$param.yml >> {} && \
-                rm -fv {}.old
-              "
+                rm -fv {}.old"
         done
         rm -fv src/+parameters.yml
