--- a/src/commands/merge-parameters.yml
+++ b/src/commands/merge-parameters.yml
@@ -23,6 +23,8 @@ steps:
                 yq p -v -i ./.parameters/$param.yml parameters.$param && \
                 mv {} {}.old && \
                 yq m -v -x {}.old ./.parameters/$param.yml >> {} && \
-                rm -fv {}.old"
+                rm -fv {}.old \
+                exit 0
+              "
         done
         rm -fv src/+parameters.yml
