--- a/src/commands/env-publish.yml
+++ b/src/commands/env-publish.yml
@@ -3,21 +3,13 @@ description: <
   Environment variables from envorbs are accepted.
 parameters:
   orb-path:
-    description: The path to the orb file.
+    description: the path to the orb file
     type: string
   orb-ref:
     description: >
       A fully-qualified reference to an orb. This takes the form <namespace>/<orb-name>@<version>
       NOTE: To publish a dev version prefix the version with 'dev:' like this: <namespace>/<orb-name>@dev:<label>
     type: string
-  token-variable:
-    description: >
-      The env var containing your token. Pass this as a literal string such
-      as `$ORB_PUBLISHING_TOKEN`. Do not paste the actual token into your
-      configuration. If omitted it's assumed the CLI has already been setup
-      with a valid token.
-    type: string
-    default: ""
 steps:
   - run:
       name: >
@@ -25,4 +17,4 @@ steps:
         NOTE: this currently assumes you are publishing to the registry at circleci.com
       command: |
         source /usr/local/bin/envload
-        circleci orb publish << parameters.orb-path >> << parameters.orb-ref >> <<# parameters.token-variable >>--token << parameters.token-variable >> <</ parameters.token-variable >>
+        circleci orb publish << parameters.orb-path >> << parameters.orb-ref >> <<# parameters.token-variable >>--token << parameters.publish-token-variable >> <</ parameters.token-variable >>
