--- a/src/jobs/publish.yml
+++ b/src/jobs/publish.yml
@@ -1,10 +1,8 @@
-description: Pack the contents of an orb for publishing and publish it.
+description: >
+  This is an extended version of the upstream orb-tools publishing job.
+  It adds a environment variable patching and cross-cutting parameters.
+
 parameters:
-  alpine_version:
-    description: >
-      Alpine version
-    type: string
-    default: ""
   source-dir:
     description: >
       Path to the root of the orb source directory to be packed.
@@ -60,16 +58,6 @@ parameters:
       By default, the environment variable `$ORB_PUBLISHING_VERSION` is assumed.
     type: string
     default: "${ORB_PUBLISHING_VERSION}"
-  publish-token-variable:
-    description: >
-      The env var containing your publish token. Pass this as a literal string such
-      as `$ORB_PUBLISHING_TOKEN`. DO NOT paste the actual token into your
-      configuration. If omitted it's assumed the CLI has already been setup
-      with a valid token.
-      By default, an environment variable `$ORB_PUBLISHING_TOKEN` is expected.
-      Make sure to pass a context to this job that contains the variable.
-    type: string
-    default: "${ORB_PUBLISHING_TOKEN}"
   patch-environment-variables:
     description: >
       To replace all template variables with the respective environment variables.
@@ -85,9 +73,11 @@ parameters:
       are referenced there via << parameters.xyz >>.
     type: boolean
     default: true
+
 executor:
   name: default
   alpine_version: << parameters.alpine_version >>
+
 steps:
   - when:
       condition: << parameters.checkout >>
@@ -99,7 +89,7 @@ steps:
       condition: << parameters.patch-parameters >>
       steps:
         - merge-parameters
-  - pack:
+  - orb-tools/pack:
       source: << parameters.source-dir >>
       destination: << parameters.destination-file >>
   - when:
@@ -111,7 +101,7 @@ steps:
   - when:
       condition: << parameters.validate >>
       steps:
-        - validate:
+        - orb-tools/validate:
             orb-path: << parameters.destination-file >>
   - when:
       condition: << parameters.namespace >>
