--- a/src/jobs/publish.yml
+++ b/src/jobs/publish.yml
@@ -99,7 +99,7 @@ steps:
   - env-publish:
       orb-path: << parameters.destination-file >>
       orb-ref: "${ORB_PUBLISHING_NAMESPACE}/${ORB_PUBLISHING_NAME}@<< parameters.version >>"
-      token-variable: << parameters.publish-token-variable >>
+      publish-token-variable: << parameters.publish-token-variable >>
   - when:
       condition: << parameters.persist >>
       steps:
