--- a/src/commands/env-publish.yml
+++ b/src/commands/env-publish.yml
@@ -17,4 +17,4 @@ steps:
         NOTE: this currently assumes you are publishing to the registry at circleci.com
       command: |
         source /usr/local/bin/envload
-        circleci orb publish << parameters.orb-path >> << parameters.orb-ref >> <<# parameters.token-variable >>--token << parameters.publish-token-variable >> <</ parameters.token-variable >>
+        circleci orb publish << parameters.orb-path >> << parameters.orb-ref >> <<# parameters.publish-token-variable >>--token << parameters.publish-token-variable >> <</ parameters.publish-token-variable >>
